# GALwizard

./: .gitignore  CMakeLists.txt  README.md  \  a.out  functions.cpp  makefile  matrix.cpp  matrix.h  result  test.cpp
.cache/clangd/index/: functions.cpp.57C295DCC546EED2.idx  functions.h.9B9719E518B79004.idx  main.cpp.B7BA8E679673F7B7.idx  matrix.cpp.025FEF13D5B156D8.idx  matrix.h.DFFCA40367244F51.idx  number.cpp.AD4461DEFC85CB55.idx  number.h.9C01656DF63F4E5B.idx  number_test.cpp.4E0B51E332097BA0.idx  test.cpp.B3A99B2F988AB377.idx
.github/workflows/: test.yaml
include/: functions.h  matrix.h
src/: functions.cpp  main.cpp  matrix.cpp  tags
src/complex/: complex.h  complex_test.cpp  number.cpp  number.h  number_test.cpp
src/imaginary/: complex.cpp
test/: test.cpp  testing.cpp
